--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                 </div>    
                 <div class="bg-black bg-opacity-70 p-8 mb-5">
                     <p class="text-center leading-6 text-sm font-light">
-                                            	 <a rel="nofollow" href="https://docs.google.com/forms/d/e/1FAIpQLSc53H0XCxO5jN9k2XoNBc803KOPgXQoud_o4876hdsvEQg0Dg/formResponse" target="_parent">send us a message</a>. </p>
+                                            	 <a rel="nofollow" href="https://docs.google.com/forms/d/e/1FAIpQLSc53H0XCxO5jN9k2XoNBc803KOPgXQoud_o4876hdsvEQg0Dg/formResponse" target="_parent">send us a message</a> </p>
                 </div>
                 <div class="text-center">
                     <div class="inline-block">
